kubernetes/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /service-B
            pathType: Prefix  
            backend:
              service:
                name: service-b
                port:
                  number: 80
          - path: /service-A
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 80
